--- a/MNIST/main.ipynb
+++ b/MNIST/main.ipynb
@@ -53,24 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading Datas ...\n",
-      "Loading Datas Finished\n",
-      "train datas of 469\n",
-      "test datas of 79\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Loading Datas ...\")\n",
     "train_dataset = datasets.MNIST(root='data', train=True, transform=transform, download=True)\n",
@@ -83,65 +73,6 @@
     "print(\"train datas of %d\" % len(train_loader))\n",
     "print(\"test datas of %d\" % len(test_loader))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "with open('data/MNIST/raw/train-images-idx3-ubyte', 'rb') as f:\n",
-    "    file = f.read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(28, 28, 1)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "image = [int(str(item).encode('ascii'), 16) for item in file[16: 16 + 784]]\n",
-    "image_np = np.array(image, dtype=np.uint8).reshape(28, 28, 1)\n",
-    "print(image_np.shape)\n",
-    "cv2.imwrite('test.jpg', image_np)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -204,50 +135,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "train epoch 0, batch 0, loss 2.305865\n",
-      "train epoch 0, batch 100, loss 0.054794\n",
-      "train epoch 0, batch 200, loss 0.056644\n",
-      "train epoch 0, batch 300, loss 0.107167\n",
-      "train epoch 0, batch 400, loss 0.070186\n",
-      "test average loss 0.0003, accuracy 98.6500\n",
-      "train epoch 1, batch 0, loss 0.063086\n",
-      "train epoch 1, batch 100, loss 0.083722\n",
-      "train epoch 1, batch 200, loss 0.031873\n",
-      "train epoch 1, batch 300, loss 0.032263\n",
-      "train epoch 1, batch 400, loss 0.020221\n",
-      "test average loss 0.0002, accuracy 99.1300\n",
-      "train epoch 2, batch 0, loss 0.012650\n",
-      "train epoch 2, batch 100, loss 0.005618\n",
-      "train epoch 2, batch 200, loss 0.013819\n",
-      "train epoch 2, batch 300, loss 0.006610\n",
-      "train epoch 2, batch 400, loss 0.108925\n",
-      "test average loss 0.0003, accuracy 98.9300\n",
-      "train epoch 3, batch 0, loss 0.013500\n",
-      "train epoch 3, batch 100, loss 0.004102\n",
-      "train epoch 3, batch 200, loss 0.045152\n",
-      "train epoch 3, batch 300, loss 0.038900\n",
-      "train epoch 3, batch 400, loss 0.011184\n",
-      "test average loss 0.0002, accuracy 99.0500\n",
-      "train epoch 4, batch 0, loss 0.004579\n",
-      "train epoch 4, batch 100, loss 0.008313\n",
-      "train epoch 4, batch 200, loss 0.034037\n",
-      "train epoch 4, batch 300, loss 0.028068\n",
-      "train epoch 4, batch 400, loss 0.018240\n",
-      "test average loss 0.0002, accuracy 99.1800\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for epoch in range(0, EPOCHS):\n",
     "    train(model, DEVICE, train_loader, optimizer, epoch)\n",
