--- a/CatDog/main.ipynb
+++ b/CatDog/main.ipynb
@@ -3,14 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import os"
+    "import os\n",
+    "import random\n",
+    "import shutil"
    ]
   },
   {
@@ -24,7 +22,10 @@
    "outputs": [],
    "source": [
     "TestPath = 'data/test1'\n",
-    "TrainPath = 'data/train'"
+    "TrainPath = 'data/train'\n",
+    "\n",
+    "DatasetTrain = 'dataset/train'\n",
+    "DatasetValidation = 'dataset/validation'"
    ]
   },
   {
@@ -35,20 +36,68 @@
      "name": "#%%\n"
     }
    },
+   "outputs": [],
+   "source": [
+    "def moveFiles():\n",
+    "    files = os.listdir(TrainPath)\n",
+    "    id = 0\n",
+    "    ct = 0\n",
+    "    for file in files:\n",
+    "        src = os.path.join(TrainPath, file)\n",
+    "        num = random.random()\n",
+    "        if num >= 0.8:\n",
+    "            ct += 1\n",
+    "            if 'cat' in str(file):\n",
+    "                tar = os.path.join(DatasetValidation, 'cats', file)\n",
+    "            else:\n",
+    "                tar = os.path.join(DatasetValidation, 'dogs', file)\n",
+    "        else:\n",
+    "            if 'cat' in str(file):\n",
+    "                tar = os.path.join(DatasetTrain, 'cats', file)\n",
+    "            else:\n",
+    "                tar = os.path.join(DatasetTrain, 'dogs', file)\n",
+    "        shutil.copyfile(src, tar)\n",
+    "        id += 1\n",
+    "        if id % 1000 == 0:\n",
+    "            print('%d files moved, %d train, %d validation' % (id, id - ct, ct))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def checkFiles():\n",
+    "    print(len(os.listdir(os.path.join(DatasetTrain, 'cats'))))\n",
+    "    print(len(os.listdir(os.path.join(DatasetTrain, 'dogs'))))\n",
+    "    print(len(os.listdir(os.path.join(DatasetValidation, 'cats'))))\n",
+    "    print(len(os.listdir(os.path.join(DatasetValidation, 'dogs'))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12500\n"
+      "10007\n",
+      "9993\n",
+      "2493\n",
+      "2507\n"
      ]
     }
    ],
    "source": [
-    "files = os.listdir(TrainPath)\n",
-    "for file in files:\n",
-    "    f = os.path.join(TrainPath, file)\n",
-    "    print(f)"
+    "checkFiles()"
    ]
   }
  ],
