--- a/CatDog/main.ipynb
+++ b/CatDog/main.ipynb
@@ -2,18 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
     "import random\n",
-    "import shutil"
+    "import shutil\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "import torch.optim as optim\n",
+    "import numpy as np\n",
+    "import torchvision.transforms\n",
+    "from torchvision import datasets\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "from models.CNN import CNN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -25,12 +39,17 @@
     "TrainPath = 'data/train'\n",
     "\n",
     "DatasetTrain = 'dataset/train'\n",
-    "DatasetValidation = 'dataset/validation'"
+    "DatasetValidation = 'dataset/validation'\n",
+    "\n",
+    "DEVICE = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "BATCH_SIZE = 1\n",
+    "EPOCHS = 5\n",
+    "LEARNING_RATE = 1e-3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -64,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": true,
@@ -82,22 +101,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10007\n",
-      "9993\n",
-      "2493\n",
-      "2507\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
     }
-   ],
+   },
+   "outputs": [],
    "source": [
-    "checkFiles()"
+    "transforms = torchvision.transforms.Compose([\n",
+    "    torchvision.transforms.Resize(364),\n",
+    "    torchvision.transforms.CenterCrop(364),\n",
+    "    torchvision.transforms.RandomHorizontalFlip(p=0.5),\n",
+    "    torchvision.transforms.ToTensor(),\n",
+    "    torchvision.transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
+    "])\n",
+    "train_dataset = datasets.ImageFolder(root=DatasetTrain, transform=transforms)\n",
+    "test_dataset = datasets.ImageFolder(root=DatasetValidation, transform=transforms)\n",
+    "\n",
+    "train_loader = DataLoader(dataset=train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "test_loader = DataLoader(dataset=test_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "\n",
+    "print(\"Loading Data Finished\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "model = CNN().to(DEVICE)\n",
+    "optimizer = optim.Adam(model.parameters())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def train(model, device, train_loader, optimizer, epoch):\n",
+    "    model.train()\n",
+    "    for batch_index, (data, target) in enumerate(train_loader):\n",
+    "        data, target = data.to(device), target.to(device)\n",
+    "        optimizer.zero_grad()\n",
+    "        output = model(data)\n",
+    "        loss = F.cross_entropy(output, target)\n",
+    "        pred = output.softmax(dim=1)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        if batch_index % 100 == 0:\n",
+    "             print(\"train epoch %d, batch %d, loss %.6f\" % (epoch, batch_index, loss.item()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def evaluate(model, device, test_loader):\n",
+    "    model.eval()\n",
+    "    correct = 0.0\n",
+    "    test_loss = 0.0\n",
+    "    with torch.no_grad():\n",
+    "        for data, target in test_loader:\n",
+    "            data, target = data.to(device), target.to(device)\n",
+    "            output = model(data)\n",
+    "            test_loss += F.cross_entropy(output, target).item()\n",
+    "            pred = output.argmax(dim=1)\n",
+    "            correct += pred.eq(target.view_as(pred)).sum().item()\n",
+    "        test_loss /= len(test_loader.dataset)\n",
+    "        print(\"test average loss %.4f, accuracy %.4f\" % (test_loss, 100.0 * correct / len(test_loader.dataset)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for epoch in range(0, EPOCHS):\n",
+    "    train(model, DEVICE, train_loader, optimizer, epoch)\n",
+    "    evaluate(model, DEVICE, test_loader)"
    ]
   }
  ],
